// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "info": {
        "development": false,
      },
      "name": "bundle.js",
      "size": 814,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 25,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 814,
        },
      ],
      "assetsSize": 814,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 25,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for hot+production 2`] = `
"    Asset       Size  Chunks  Chunk Names
bundle.js  814 bytes    main  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 25 bytes [entry]
[./index.js] 25 bytes {main}"
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "info": {
        "development": false,
      },
      "name": "bundle.js",
      "size": 966,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 15,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 966,
        },
      ],
      "assetsSize": 966,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
  ],
  "errorsCount": 2,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/identifier-let-strict-mode/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 15,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 2`] = `
"    Asset       Size  Chunks  Chunk Names
bundle.js  966 bytes    main  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 15 bytes [entry]
[./index.js] 15 bytes {main}

error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode



error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

"
`;

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "info": {
        "development": false,
      },
      "name": "bundle.js",
      "size": 860,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 20,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 860,
        },
      ],
      "assetsSize": 860,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

",
      "message": "Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 20,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 2`] = `
"    Asset       Size  Chunks  Chunk Names
bundle.js  860 bytes    main  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 20 bytes [entry]
[./index.js] 20 bytes {main}

error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

"
`;

exports[`StatsTestCases should print correct stats for parse-error 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "info": {
        "development": false,
      },
      "name": "bundle.js",
      "size": 1040,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 83,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 1040,
        },
      ],
      "assetsSize": 1040,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

",
      "message": "Expected ';', '}' or <eof>",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./a.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/parse-error/a.js",
      "moduleType": "js",
      "name": "./a.js",
      "size": 14,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "./b.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/parse-error/b.js",
      "moduleType": "js",
      "name": "./b.js",
      "size": 55,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/parse-error/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 14,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for parse-error 2`] = `
"    Asset      Size  Chunks  Chunk Names
bundle.js  1.02 KiB    main  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 83 bytes [entry]
[./a.js] 14 bytes {main}
[./b.js] 55 bytes {main}
[./index.js] 14 bytes {main}

error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

"
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "info": {
        "development": false,
      },
      "name": "bundle.js",
      "size": 879,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 51,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 879,
        },
      ],
      "assetsSize": 879,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

",
      "message": "Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 51,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 2`] = `
"    Asset       Size  Chunks  Chunk Names
bundle.js  879 bytes    main  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 51 bytes [entry]
[./index.js] 51 bytes {main}

error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

"
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "info": {
        "development": false,
      },
      "name": "bundle.js",
      "size": 1498,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 39,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 1498,
        },
      ],
      "assetsSize": 1498,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "Export should be relative path and start with "./", but got ../../index.js
",
      "message": "Export should be relative path and start with "./", but got ../../index.js",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 39,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 2`] = `
"    Asset      Size  Chunks  Chunk Names
bundle.js  1.46 KiB    main  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 39 bytes [entry]
[./index.js] 39 bytes {main}

Export should be relative path and start with "./", but got ../../index.js
"
`;

exports[`StatsTestCases should print correct stats for sass-warnings 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "info": {
        "development": false,
      },
      "name": "main.js",
      "size": 995,
      "type": "asset",
    },
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "info": {
        "development": false,
      },
      "name": "main.css",
      "size": 20,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "main.css",
        "main.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 41,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.css",
          "size": 20,
        },
        {
          "name": "main.js",
          "size": 995,
        },
      ],
      "assetsSize": 1015,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/sass-warnings/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 22,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "./index.scss",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/sass-warnings/index.scss",
      "moduleType": "css",
      "name": "./index.scss",
      "size": 1,
      "type": "module",
    },
  ],
  "warnings": [
    {
      "formatted": "warning[scss]: Sass Warning
  ┌─ tests/statsCases/sass-warnings/index.scss:2:11
  │
2 │   width: (12px/4px);
  │           ^^^^^^^^ Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div(12px, 4px) or calc(12px / 4px)

More info and automated migrator: https://sass-lang.com/d/slash-div

",
      "message": "Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div(12px, 4px) or calc(12px / 4px)

More info and automated migrator: https://sass-lang.com/d/slash-div",
    },
  ],
  "warningsCount": 1,
}
`;

exports[`StatsTestCases should print correct stats for sass-warnings 2`] = `
"   Asset       Size  Chunks  Chunk Names
 main.js  995 bytes    main  main
main.css   20 bytes    main  main
Entrypoint main = main.css main.js
chunk {main} main.css, main.js (main) 41 bytes [entry]
[./index.js] 22 bytes {main}
[./index.scss] 1 bytes {main}

warning[scss]: Sass Warning
  ┌─ tests/statsCases/sass-warnings/index.scss:2:11
  │
2 │   width: (12px/4px);
  │           ^^^^^^^^ Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div(12px, 4px) or calc(12px / 4px)

More info and automated migrator: https://sass-lang.com/d/slash-div

"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "info": {
        "development": false,
      },
      "name": "bundle.js",
      "size": 923,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 26,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 923,
        },
      ],
      "assetsSize": 923,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 26,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for simple 2`] = `
"    Asset       Size  Chunks  Chunk Names
bundle.js  923 bytes    main  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 26 bytes [entry]
[./index.js] 26 bytes {main}"
`;
